--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>OceanCleaner Fondation</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <meta name="description" content="OceanCleaner est une fondation qui préserve la propretée des oceans et ses abords ,
    ainsi que la protection de certaines éspeces sous marines... " 
    />
