changement du chemin d'accés vers les photos et les svg
anciennement dans un dossier pictures , actuellement a la racine

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container-fluid">
     <header class="row p-2 bg-light">
-      <img src="pictures/the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
+      <img src="the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
       <h1 class="col-12 d-flex justify-content-center align-items-center ">OceanCleaner Foundation</h1>
     </header>
     <div class="row">
@@ -46,7 +46,7 @@
       <div class="row p-2 d-flex justify-content-around align-items-center">
         <div class=" col-12 col-md-5">
           <div class="card mb-5">
-            <img class="card-img-top" src="pictures/pexels-inchs-6702766.jpg" alt="Card image cap">
+            <img class="card-img-top" src="pexels-inchs-6702766.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">OceanCleaner rassemble plus d'une centaines de bénévoles à travers le monde pour nettoyer les oceans 
                 lors de mission , nous intervenons avec plusieurs bateaux pour la collecte des dechets trop éloignees du bord (Utilisation
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="pictures/istockphoto-1253813515-1024x1024.jpg" alt="Card image cap">
+            <img class="card-img-top" src="istockphoto-1253813515-1024x1024.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Nous travaillons avec plusieurs partenaires dans le traitement des dechets collectées qui vont ensuite 
                 etre recyclés.<br>
@@ -66,7 +66,7 @@
         </div>
         <div class=" col-12 col-md-5 pt-1">
           <div class="card">
-            <img class="card-img-top" src="pictures/pexels-ron-lach-9034666.jpg" alt="Card image cap">
+            <img class="card-img-top" src="pexels-ron-lach-9034666.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Nous avons également une equipe de bénévoles qui s'occupe de la collecte de déchets sur les plages et
                  le long des cotes.</p>
@@ -77,13 +77,13 @@
     </main>
     <footer class="row mt-2">
       <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-        <img src="pictures/facebook.svg" alt="logo de facebook" height="40px" width="40px">
+        <img src="facebook.svg" alt="logo de facebook" height="40px" width="40px">
       </div>
       <div  class="col-4 bg-light d-flex align-items-center justify-content-center">
         <p>Suivez de prés toutes nos missions</p>
       </div>
       <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-        <img src="pictures/twitter.svg" alt="logo de twitter" height="40px" width="40px">
+        <img src="twitter.svg" alt="logo de twitter" height="40px" width="40px">
       </div>
     </footer>
   </div>
