--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link disabled" aria-current="page" href="#">Page d'acceuil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historique.html">Historique de nos missions</a>
+                <a class="nav-link" href="historique/historique.html">Historique de nos missions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mission.html">Mission en cours</a>
+                <a class="nav-link" href="mission/mission.html">Mission en cours</a>
               </li>
             </ul>
             <form class="d-flex">
