--- a/mission/mission.html
+++ b/mission/mission.html
@@ -24,10 +24,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 p-2 d-flex justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Page d'acceuil</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Page d'acceuil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="historique.html">Historique de nos missions</a>
+                <a class="nav-link " href="historique/historique.html">Historique de nos missions</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="mission.html">Mission en cours</a>
