--- a/historique/historique.html
+++ b/historique/historique.html
@@ -24,13 +24,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 p-2 d-flex justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Page d'acceuil</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Page d'acceuil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="historique.html">Historique de nos missions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mission.html">Mission en cours</a>
+                <a class="nav-link" href="mission/mission.html">Mission en cours</a>
               </li>
             </ul>
             <form class="d-flex">
