--- a/mission/mission.html
+++ b/mission/mission.html
@@ -3,7 +3,7 @@
 <head>
   <title>OceanCleaner Fondation: Mission en cours</title>
   <link rel="stylesheet" href="missionStyle.css">
-  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
   <meta name="description" content="OceanCleaner est actuellement en mission pour la planéte , venez visiter cette page pour en savoir plus et peut etre participer à la prochaine mission... " 
    />
    <meta charset="utf-8">
@@ -11,7 +11,7 @@
 <body>
   <div class="container-fluid">
     <header class="row p-2 bg-light">
-      <img src="pictures/the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
+      <img src="../pictures/the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
       <h1 class="col-12 d-flex justify-content-center align-items-center ">OceanCleaner Foundation</h1>
     </header>
     <div class="row">
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="../index.html">Page d'acceuil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="historique/historique.html">Historique de nos missions</a>
+                <a class="nav-link " href="../historique/historique.html">Historique de nos missions</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="mission.html">Mission en cours</a>
@@ -59,19 +59,19 @@
             </div>
         </div>
         <div class="row d-flex justify-content-around p-2">
-            <img src="pictures/4936e8790254e85f147c03d9978dd6c3.jpg" alt="carte de la Malaisie" class="col-12 col-lg-6 p-2">
-            <img src="pictures/istockphoto-1272763782-1024x1024.jpg" alt="carte de la Malaisie" class="col-12 col-lg-6 p-2">
+            <img src="../pictures/4936e8790254e85f147c03d9978dd6c3.jpg" alt="carte de la Malaisie" class="col-12 col-lg-6 p-2">
+            <img src="../pictures/istockphoto-1272763782-1024x1024.jpg" alt="carte de la Malaisie" class="col-12 col-lg-6 p-2">
         </div>
     </main>
     <footer class="row mt-2">
         <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-          <img src="pictures/facebook.svg" alt="logo de facebook" height="40px" width="40px">
+          <img src="../pictures/facebook.svg" alt="logo de facebook" height="40px" width="40px">
         </div>
         <div  class="col-4 bg-light d-flex align-items-center justify-content-center">
           <p>Suivez de prés toutes nos missions</p>
         </div>
         <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-          <img src="pictures/twitter.svg" alt="logo de twitter" height="40px" width="40px">
+          <img src="../pictures/twitter.svg" alt="logo de twitter" height="40px" width="40px">
         </div>
       </footer>
   </div>
