--- a/historique/historique.html
+++ b/historique/historique.html
@@ -3,7 +3,7 @@
 <head>
   <title>OceanCleaner Fondation: Historique des missions</title>
   <link rel="stylesheet" href="historiqueStyle.css">
-  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
   <meta name="description" content="OceanCleaner à mit en place cette page pour que les personnes intéressées puissent accéder à l'historique de toutes nos missions..." 
    />
    <meta charset="utf-8">
@@ -11,7 +11,7 @@
 <body>
   <div class="container-fluid">
     <header class="row p-2 bg-light">
-      <img src="pictures/the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
+      <img src="../pictures/the-ocean-1.svg" alt="Logo of the compagny (not supported by browser)" height="50px" width="50px">
       <h1 class="col-12 d-flex justify-content-center align-items-center ">OceanCleaner Foundation</h1>
     </header>
     <div class="row">
@@ -30,7 +30,7 @@
                 <a class="nav-link disabled" href="historique.html">Historique de nos missions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mission/mission.html">Mission en cours</a>
+                <a class="nav-link" href="../mission/mission.html">Mission en cours</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -108,13 +108,13 @@
     </main>
     <footer class="row mt-2">
       <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-        <img src="pictures/facebook.svg" alt="logo de facebook" height="40px" width="40px">
+        <img src="../pictures/facebook.svg" alt="logo de facebook" height="40px" width="40px">
       </div>
       <div  class="col-4 bg-light d-flex align-items-center justify-content-center">
         <p>Suivez de prés toutes nos missions</p>
       </div>
       <div class="col-4 bg-light d-flex align-items-center justify-content-center">
-        <img src="pictures/twitter.svg" alt="logo de twitter" height="40px" width="40px">
+        <img src="../pictures/twitter.svg" alt="logo de twitter" height="40px" width="40px">
       </div>
     </footer>
   </div>
